--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=spotify-clone
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.h2.console.enabled=true
+
+
+spring.profiles.active=postgres
+spring.datasource.url=jdbc:postgresql:spotify-clone-java
+spring.datasource.username=postgres
+spring.datasource.password=0700113484
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+server.error.include-stacktrace=never
+#server.error.whitelabel.enabled=false
+server.error.include-exception=true
